website/content/docs/v0.6/index.md
---
title: Welcome
---

## Open Source

### Community

- GitHub: [repo](https://github.com/talos-systems/talos)
- Slack: Join our [slack channel](https://slack.dev.talos-systems.io)
- Forum: [community](https://groups.google.com/a/talos-systems.com/forum/#!forum/community)
- Twitter: [@talossystems](https://twitter.com/talossystems)
- Email: [info@talos-systems.com](mailto:info@talos-systems.com)

If you're interested in this project and would like to help in engineering efforts, or have general usage questions, we are happy to have you!
We hold a weekly meeting that all audiences are welcome to attend.

### Office Hours

- When: Mondays at 17:00 UTC.
- Where: [Google Meet](https://meet.google.com/day-pxhv-zky).

You can subscribe to this meeting by joining the community forum above.

## Enterprise

If you are using Talos in a production setting, and need consulting services to get started or to integrate Talos into your existing environment, we can help.
Talos Systems, Inc. offers support contracts with SLA (Service Level Agreement)-bound terms for mission-critical environments.

[Learn More](https://www.talos-systems.com/support/)
