website/content/docs/v0.7/index.md
---
title: Welcome
---

## Welcome

Welcome to the Talos documentation.
If you are just getting familiar with Talos, we recommend starting here:

- [What is Talos](introduction/what-is-talos/): a quick description of Talos
- [Quickstart](introduction/quickstart/): the fastest way to get a Talos cluster up and running
- [Getting Started](introduction/getting-started/): a long-form, guided tour of getting a full Talos cluster deployed

## Open Source

### Community

- GitHub: [repo](https://github.com/talos-systems/talos)
- Slack: Join our [slack channel](https://slack.dev.talos-systems.io)
- Matrix: Join our Matrix channels:
  - Community: [#talos:matrix.org](https://matrix.to/#/#talos:matrix.org)
  - Support: [#talos-support:matrix.org](https://matrix.to/#/#talos-support:matrix.org)
- Support: Questions, bugs, feature requests [GitHub Discussions](https://github.com/talos-systems/talos/discussions)
- Forum: [community](https://groups.google.com/a/siderolabs.com/forum/#!forum/community)
- Twitter: [@SideroLabs](https://twitter.com/talossystems)
- Email: [info@SideroLabs.com](mailto:info@SideroLabs.com)

If you're interested in this project and would like to help in engineering efforts, or have general usage questions, we are happy to have you!
We hold a weekly meeting that all audiences are welcome to attend.

We would appreciate your feedback so that we can make Talos even better!
To do so, you can take our [survey](https://docs.google.com/forms/d/1TUna5YTYGCKot68Y9YN_CLobY6z9JzLVCq1G7DoyNjA/edit).

### Office Hours

- When: Mondays at 16:30 UTC.
- Where: [Google Meet](https://meet.google.com/day-pxhv-zky).

You can subscribe to this meeting by joining the community forum above.

## Enterprise

If you are using Talos in a production setting, and need consulting services to get started or to integrate Talos into your existing environment, we can help.
Sidero Labs, Inc. offers support contracts with SLA (Service Level Agreement)-bound terms for mission-critical environments.

[Learn More](https://www.siderolabs.com/support/)
